k8s/dev/monitoring.yaml
apiVersion: v1
kind: Service
metadata:
  name: resume-service-metrics
  namespace: resume-service
  labels:
    app: resume-service
spec:
  selector:
    app: resume-service
  ports:
  - name: metrics
    port: 8080
    targetPort: 8080
